--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </nav>
 
     <ul id='ul'>
-        <li><div>H</div></li>
-        <li><div>N</div></li>
-        <li><div>C</div></li>
-        <li><div>A</div></li>
+        <li><div>☎</div></li>
+        <li><div>✎</div></li>
+        <li><div>✉</div></li>
+        <li><div>✈</div></li>
     </ul>
     
     <div class='content'>
