--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         <div class='altContainer'>
             <div class='altItem'>1</div>
         </div>
+
+        <h2>Skill Ratings</h2>
+        <h4>Available Points: <div>20</div></h4>
+
+        <div><h4>Time Management</h4>
+        <div class='circleContainer'>
+            <div class='circle'></div><div class='circle'></div>
+        </div></div>
+        
+        <div><h4>Problem Solving</h4>
+        <div class='circleContainer'>
+            <div class='circle'></div><div class='circle'></div>
+        </div></div>
+
+        <div><h4>Teamwork</h4>
+        <div class='circleContainer'>
+            <div class='circle'></div><div class='circle'></div>
+        </div></div>
     </div>
 </body>
 <script src="script.js"></script>
