--- a/index.html
+++ b/index.html
@@ -24,40 +24,43 @@
         </div>
     </nav>
 
-    <div class='content'>
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam vulputate ut pharetra sit amet aliquam. Sed vulputate mi sit amet mauris commodo. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum. Vel orci porta non pulvinar neque laoreet. Tristique senectus et netus et malesuada. Sed blandit libero volutpat sed cras ornare arcu dui vivamus. Morbi tempus iaculis urna id volutpat lacus laoreet. Urna condimentum mattis pellentesque id nibh. Risus nullam eget felis eget nunc lobortis mattis. Donec massa sapien faucibus et molestie ac feugiat sed. Nec sagittis aliquam malesuada bibendum. Dui nunc mattis enim ut tellus elementum sagittis. Arcu dui vivamus arcu felis bibendum ut tristique et.</p>
-    
-        <h2>Projects</h2>  
-        <div class='container'>
-            <div class='item'>1</div>
-            <div class='item'>2</div>
-            <div class='item'>3</div>
-            <div class='item'>4</div>
-            <div class='item'>5</div>
-            <div class='item'>6</div>
-        </div>
-        <div class='altContainer'>
-            <div class='altItem'>1</div>
-        </div>
-
-        <h2>Skill Ratings</h2>
-        <h4>Available Points: <div>20</div></h4>
-
-        <div><h4>Time Management</h4>
-        <div class='circleContainer'>
-            <div class='circle'></div><div class='circle'></div>
-        </div></div>
+    <div>
         
-        <div><h4>Problem Solving</h4>
-        <div class='circleContainer'>
-            <div class='circle'></div><div class='circle'></div>
-        </div></div>
+        <div class='about'>
+            <div class='content'>
+                <h2 style='padding: 120px 0; font-size: 100px'>About Me</h2>
+                <p style='font-size: 18px; line-height: 34px'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam vulputate ut pharetra sit amet aliquam. Sed vulputate mi sit amet mauris commodo. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum. Vel orci porta non pulvinar neque laoreet. Tristique senectus et netus et malesuada. Sed blandit libero volutpat sed cras ornare arcu dui vivamus. Morbi tempus iaculis urna id volutpat lacus laoreet.</p>
+            </div>
+        </div>
 
-        <div><h4>Teamwork</h4>
-        <div class='circleContainer'>
-            <div class='circle'></div><div class='circle'></div>
-        </div></div>
+        <div class='projects'>
+            <div class='content'>
+                <h2 style='padding: 20px 0; font-size: 40px; color: #fff'>Projects</h2>  
+                <div class='container'>
+                    <div class='item'>1</div>
+                    <div class='item'>2</div>
+                    <div class='item'>3</div>
+                    <div class='item'>4</div>
+                    <div class='item'>5</div>
+                    <div class='item'>6</div>
+                </div>
+                <div class='altContainer'>
+                    <div class='altItem'>1</div>
+                </div>
+            </div>
+        </div>
+
+        <div class='skills'>
+            <div class='content'>
+                <h2>Skill Ratings</h2>
+            </div>
+        </div>
+
+        <div class='contact'>
+            <div class='content'>
+                <h2>Contact Me</h2>
+            </div>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
