--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
       </div>
 
-      <footer>Copyright JamieEvans 2020</footer>
+      <footer>Copyright kJamieEvans 2020</footer>
   </div>
 </body>
 <script src="script.js"></script>
