--- a/index.html
+++ b/index.html
@@ -1,26 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/cfbdff1c60.js" crossorigin="anonymous"></script>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Jamie Evans</title>
+  <title>Jamie Evans.</title>
 </head>
 <body>
-  <header>
-    <div>
-      <h1>Jamie Evans</h1>
-      <h4>Junior Developer/Engineer</h4>
+  <div class='titlePage'>
+    <div class='title'>
+      <h1>WELCOME.</h1>
+      <h1>JAMIE</h1>
     </div>
-    <ul>
-      <li><a href='#'>About Me</a></li>
-      <li><a href='#'>Projects</a></li>
-      <li><a href='#'>Experience</a></li>
-      <li><a href='#'>Contact Me</a></li>
-    </ul>
-  </header>
-  <footer>Copyright JamieEvans 2020</footer>
+    <div class='seeMore'>
+      <i class="fas fa-chevron-down fa-4x"></i>
+    </div>
+  </div>
+
+  <div class='aboutPage'>
+    <div class='about'>
+      <img src='./img/me.jpg'>
+      <div class='aboutContent'>
+        <h1 style='font-size: 54px'>I AM...</h1>
+        <h4 style='font-size: 18px; line-height: 24px;'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, alias enim tempore omnis sequi maxime maiores nulla necessitatibus perferendis magni dolores ipsa quod ipsum rerum ab culpa, consequuntur placeat quia? magni dolores ipsa quod ipsum rerum ab culpa, consequuntur placeat quia? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, alias enim tempore omnis sequi maxime maiores nulla necessitatibus perferendis magni dolores ipsa quod ipsum</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class='projectsPage'>
+    <h1>PROJECTS</h1>
+    <div class='projects'>
+      <div class="projectContainer">
+        <img src='./img/pj (1).jpg' style='width: 100%; filter: grayscale(0.6)'>
+        <div class="overlay">
+          <h3>Calculator</h3>
+          <div>
+            <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+            <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+          </div>  
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class='timelinePage'>
+    <div class='timeline'>
+      <h1>EXPERIENCE</h1>
+      <div class='columns'>
+        <div class='lineItem left '>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+        </div>
+        <div class='lineItem right'>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+        </div>
+      </div>
+      <div class='line'></div>
+    </div>
+  </div>
+
+  <div class='timerPage'>
+    <div class='timer'>
+      <h1 style='font-size: 72px'>TIME.</h1>
+      <h5>TIME YOU TOOK TO GET TO THE BOTTOM</h5>
+      <h2 class='time'>00:00:00</h2>
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
 </html>
