--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class='titlePage'>
     <div class='title'>
       <h1>WELCOME.</h1>
-      <h1>JAMIE</h1>
+      <h1> </h1>
     </div>
     <div class='seeMore'>
       <i class="fas fa-chevron-down fa-4x"></i>
@@ -31,14 +31,58 @@
   <div class='projectsPage'>
     <h1>PROJECTS</h1>
     <div class='projects'>
-      <div class="projectContainer">
-        <img src='./img/pj (1).jpg' style='width: 100%; filter: grayscale(0.6)'>
-        <div class="overlay">
-          <h3>Calculator</h3>
-          <div>
-            <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-            <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-          </div>  
+      <div class='column'>
+        <div class="projectContainer">
+          <img src='./img/calculator.jpg'>
+          <div class="overlay">
+            <h3>Calculator</h3>
+            <div>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+            </div>  
+          </div>
+        </div>
+        <div class="projectContainer">
+          <img src='./img/tic tac.jpg'>
+          <div class="overlay">
+            <h3>Tic Tac Toe</h3>
+            <div>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+            </div>  
+          </div>
+        </div>
+        <div class="projectContainer">
+          <img src='./img/clouds.jpg'>
+          <div class="overlay">
+            <h3>Weather App</h3>
+            <div>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+            </div>  
+          </div>
+        </div>
+      </div>
+      <div class='column'>
+        <div class="projectContainer">
+          <img src='./img/to do list.jpg'>
+          <div class="overlay">
+            <h3>To do list</h3>
+            <div>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+            </div>  
+          </div>
+        </div>
+        <div class="projectContainer">
+          <img src='./img/library.jpg'>
+          <div class="overlay">
+            <h3>Library</h3>
+            <div>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
+              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
+            </div>  
+          </div>
         </div>
       </div>
     </div>
@@ -49,12 +93,12 @@
       <h1>EXPERIENCE</h1>
       <div class='columns'>
         <div class='lineItem left '>
-          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4 class='fullBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4 class='borderBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
         </div>
         <div class='lineItem right'>
-          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4 class='borderBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <h4 class='fullBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
         </div>
       </div>
       <div class='line'></div>
@@ -66,6 +110,18 @@
       <h1 style='font-size: 72px'>TIME.</h1>
       <h5>TIME YOU TOOK TO GET TO THE BOTTOM</h5>
       <h2 class='time'>00:00:00</h2>
+    </div>
+    <div class='line2'></div>
+    <div class='contact'>
+      <div style='display: flex'>
+        <i class="far fa-envelope"></i>
+        <h4>jamieevans96@googlemail.com</h4>
+      </div>
+      <div style='display: flex'>
+        <i class="fab fa-github"></i>
+        <h4>github.com/jamieevans96</h4>
+      </div>
+      <button>Contact Me</button>
     </div>
   </div>
 </body>
