--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class='titlePage'>
     <div class='title'>
-      <h1>WELCOME.</h1>
-      <h1> </h1>
+      <h1>JAMIE EVANS</h1>
+      <h5>JUNIOR DEVELOPER/ENGINEER</h5>
     </div>
     <div class='seeMore'>
       <i class="fas fa-chevron-down fa-4x"></i>
@@ -23,8 +23,16 @@
       <img src='./img/me.jpg'>
       <div class='aboutContent'>
         <h1 style='font-size: 54px'>I AM...</h1>
-        <h4 style='font-size: 18px; line-height: 24px;'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, alias enim tempore omnis sequi maxime maiores nulla necessitatibus perferendis magni dolores ipsa quod ipsum rerum ab culpa, consequuntur placeat quia? magni dolores ipsa quod ipsum rerum ab culpa, consequuntur placeat quia? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, alias enim tempore omnis sequi maxime maiores nulla necessitatibus perferendis magni dolores ipsa quod ipsum</h4>
+        <h4 style='font-size: 18px; line-height: 24px;'>a junior developer/engineer from the West Midlands, UK. I started my career in design & quality engineering. Whilst coding in my free time, I have discovered a passion for it that I would love to translate over to my career. I mainly do front-end work </h4>
       </div>
+    </div>
+    <h2 style='margin: 60px 0 10px 0'>Languages I am comfortable with</h2>
+    <div class='skills'>
+      <div class='skill'>HTML5</div>
+      <div class='skill'>CSS3</div>
+      <div class='skill'>Javascript</div>
+      <div class='skill'>React</div>
+      <div class='skill'>Node</div>
     </div>
   </div>
 
@@ -35,31 +43,64 @@
         <div class="projectContainer">
           <img src='./img/calculator.jpg'>
           <div class="overlay">
-            <h3>Calculator</h3>
-            <div>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-            </div>  
+            <div class='overlayTitle'>
+              <h2>Calculator</h2>
+              <div>
+                <a href='https://github.com/jamieevans96/Calculator' target='_blank'><i class="fas fa-external-link-alt fa-lg"></i></a>
+                <a href='https://github.com/jamieevans96/Calculator' target='_blank'><i class="fab fa-github fa-lg"></i></a>
+              </div>
+            </div>
+            <div class='description'>
+              <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui sequi expedita vero quas sint aliquam voluptates repellendus ex, delectus iusto tenetur praesentium nisi consequatur maxime soluta nulla numquam autem?</h4>
+            </div>
+            <div class='languages'>
+              <h3>Languages</h3>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
+            </div>
           </div>
         </div>
         <div class="projectContainer">
           <img src='./img/tic tac.jpg'>
           <div class="overlay">
-            <h3>Tic Tac Toe</h3>
-            <div>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-            </div>  
+            <div class='overlayTitle'>
+              <h2>Tic Tac Toe</h2>
+              <div>
+                <a href='https://github.com/jamieevans96/Tic-Tac-Toe' target='_blank'><i class="fas fa-external-link-alt fa-lg"></i></a>
+                <a href='https://github.com/jamieevans96/Tic-Tac-Toe' target='_blank'><i class="fab fa-github fa-lg"></i></a>
+              </div>
+            </div>
+            <div class='description'>
+              <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui sequi expedita vero quas sint aliquam voluptates repellendus ex, delectus iusto tenetur praesentium nisi consequatur maxime soluta nulla numquam autem?</h4>
+            </div>
+            <div class='languages'>
+              <h3>Languages</h3>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
+            </div>
           </div>
         </div>
         <div class="projectContainer">
           <img src='./img/clouds.jpg'>
           <div class="overlay">
-            <h3>Weather App</h3>
-            <div>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-            </div>  
+            <div class='overlayTitle'>
+              <h2>Weather App</h2>
+              <div>
+                <a href='https://github.com/jamieevans96/Weather-App' target='_blank'><i class="fas fa-external-link-alt fa-lg"></i></a>
+                <a href='https://github.com/jamieevans96/Weather-App' target='_blank'><i class="fab fa-github fa-lg"></i></a>
+              </div>
+            </div>
+            <div class='description'>
+              <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui sequi expedita vero quas sint aliquam voluptates repellendus ex, delectus iusto tenetur praesentium nisi consequatur maxime soluta nulla numquam autem?</h4>
+            </div>
+            <div class='languages'>
+              <h3>Languages</h3>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -67,21 +108,43 @@
         <div class="projectContainer">
           <img src='./img/to do list.jpg'>
           <div class="overlay">
-            <h3>To do list</h3>
-            <div>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-            </div>  
+            <div class='overlayTitle'>
+              <h2>To do list</h2>
+              <div>
+                <a href='https://github.com/jamieevans96/To-Do-List' target='_blank'><i class="fas fa-external-link-alt fa-lg"></i></a>
+                <a href='https://github.com/jamieevans96/To-Do-List' target='_blank'><i class="fab fa-github fa-lg"></i></a>
+              </div>
+            </div>
+            <div class='description'>
+              <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui sequi expedita vero quas sint aliquam voluptates repellendus ex, delectus iusto tenetur praesentium nisi consequatur maxime soluta nulla numquam autem?</h4>
+            </div>
+            <div class='languages'>
+              <h3>Languages</h3>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
+            </div>
           </div>
         </div>
         <div class="projectContainer">
           <img src='./img/library.jpg'>
           <div class="overlay">
-            <h3>Library</h3>
-            <div>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fas fa-external-link-alt"></i></a>
-              <a href='https://github.com/jamieevans96' target='_blank'><i class="fab fa-github"></i></a>
-            </div>  
+            <div class='overlayTitle'>
+              <h2>Library</h2>
+              <div>
+                <a href='https://github.com/jamieevans96/Book-Library' target='_blank'><i class="fas fa-external-link-alt fa-lg"></i></a>
+                <a href='https://github.com/jamieevans96/Book-Library' target='_blank'><i class="fab fa-github fa-lg"></i></a>
+              </div>
+            </div>
+            <div class='description'>
+              <h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui sequi expedita vero quas sint aliquam voluptates repellendus ex, delectus iusto tenetur praesentium nisi consequatur maxime soluta nulla numquam autem?</h4>
+            </div>
+            <div class='languages'>
+              <h3>Languages</h3>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -93,15 +156,33 @@
       <h1>EXPERIENCE</h1>
       <div class='columns'>
         <div class='lineItem left '>
-          <h4 class='fullBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-          <h4 class='borderBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <div class='fullBox'>
+            <h2>Queen Mary's Grammar School</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          </div>
+          <div class='borderBox'>
+            <h2>Regent Engineering</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          </div>
         </div>
         <div class='lineItem right'>
-          <h4 class='borderBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-          <h4 class='fullBox'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <div class='borderBox'>
+            <h2>Lancaster University</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          </div>
+          <div class='fullBox'>
+            <h2>Web Development</h2>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          </div>
         </div>
       </div>
-      <div class='line'></div>
+      <div class='line'>
+        <div class='segment' style='top: 18%'></div>
+        <div class='segment' style='top: 38%'></div>
+        <div class='segment' style='top: 58%'></div>
+        <div class='segment' style='top: 78%'></div>
+        <div class='lastSegment'></div>
+      </div>
     </div>
   </div>
 
